Retirado WBC.rar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,6 +80,8 @@ $dark:          $gray-800 !default;
 
 $theme-colors: () !default;
 
+$card-img-overlay-padding:          0rem !default;
+
 @import '../node_modules/bootstrap/scss/bootstrap';
 
 
